[project]
name = "DRA"
version = "0.3.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
	"setuptools",
	"wheel",
	"cython",
	"openai>=1.97.0",
	"detoxify>=0.5.2",
	"accelerate>=1.9.0",
]

